<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BodyTrack</string>
	<!-- Main activity values -->
    <string name="title">BODYTRACK!</string>
    <string name="gpsButton">GPS Tracking</string>    
    <string name="barcodeButton">Scan food barcode</string>  
    <string name="barcodeFail">ZXing barcode scanner not installed. Please install!</string>    
    <string name="pixButton">Take meal picture</string>    
    
    <!-- GPS Service control activity values -->
    <string name="gpsTitle">Stop GPS Tracking</string>        
    <string name="gpsSvcStartButton">Start GPS Tracking</string>    
    <string name="gpsSvcStopButton">Stop GPS Tracking</string>
    <string name="showData">Show data</string>
    <string name="dumpData">Send data to web</string>    
   
   <!--  GPS Service values -->
   <string name="svcRunning">BodyTrack GPS tracker running</string>
   <string name="svcTitle">BodyTrack GPS Service</string>
   
    <!-- Camera values -->
  	<string name="tookPic">Picture stored</string>
  	<string name="takePic">Take a new meal photo</string>
  	<string name="photoInfo">This will be where photos/notes can be reviewed</string>
  	
  	<!--  Barcode values -->
  	<string name="getBarcode">Scan a new barcode</string>
  	<string name="barcodeInfo">You will be able to review barcodes here</string>
  	
  	<!-- Menu values --> 
  	<string name="prefs">Preferences</string>
  	<string name="upload_data">Upload data</string>
  	
  	<!-- Settings values -->
  	<string name="netPrefs">Network Preferences</string>
  	<string name="gpsPrefs">GPS Preferences</string>
  	<string name="title_upload_address">Upload URL</string>
  	<string name="summary_upload_address">The URL to dump data to.</string>
  	<string name="dialog_title_upload_address">Upload URL</string>
  	<string name="default_upload_url">http://www.example.com/fake.py</string>
  	
  	<string name="title_gps_provider">Location Provider</string>
</resources>
