<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/netPrefs">
        <EditTextPreference
                android:key="upload_address"
                android:title="@string/title_upload_address"
                android:summary="@string/summary_upload_address"
                android:dialogTitle="@string/dialog_title_upload_address" 
                android:defaultValue="@string/default_upload_url"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/gpsPrefs">
        <ListPreference 
        	android:key="gps_provider"
        	android:title="@string/title_gps_provider" 
        	android:dialogTitle="@string/title_gps_provider"
        	android:entries="@array/gps_provider"
        	android:entryValues="@array/gps_provider" />
    	
	</PreferenceCategory>
</PreferenceScreen>