<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<TextView
		android:id="@+id/gpsTitle"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/gpsTitle" />
	<Button  
		android:id="@+id/gpsSvcStartButton"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/gpsSvcStartButton" />
	<Button  
		android:id="@+id/gpsSvcStopButton"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/gpsSvcStopButton" />
   	<Button  
		android:id="@+id/gpsShowButton"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/showData" />
	<TextView
		android:id="@+id/Outbox"
    	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" />
</LinearLayout>
